tests/negative/lexer/string_invalid.orng
fn main() -> Int {
    let x = "invalid escape! -> \d"
    0
}